# video_grabber

./: .markdownlint.yml  CHANGELOG.md  CONTRIBUTING.md  DISCUSSIONS_GUIDE.md  Dockerfile  Makefile  PUBLISH.md  README.md  cliff.toml  pyproject.toml  release.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: codeql.yml  lint.yml  release.yml
config/: .markdownlint.yml  .pre-commit-config.yaml  codecov.yml
docs/: CHANGELOG.md  CONTRIBUTING.md  SECURITY.md  _config.yml  features.md  index.md  installation.md  usage.md
scripts/: install.bat  install.sh  release.sh  test_real_video.sh
tests/: test_cli.py  test_cli_handler.py  test_config.py  test_downloader.py  test_downloader_download.py  test_downloader_helpers.py  test_exceptions.py  test_models.py  test_rate_limit.py  test_sources.py
vidgrab/: __init__.py  __main__.py  cli.py  config.py  downloader.py  exceptions.py  models.py  sources.py
