[tool.poetry]
name = "vidgrab"
version = "0.2.0"
description = "CLI tool to download YouTube videos at maximum quality for video editing"
authors = ["gsjonio"]
license = "MIT"
readme = "README.md"
packages = [{ include = "vidgrab" }]

[tool.poetry.dependencies]
python = ">=3.11"
yt-dlp = ">=2024.1.1"
typer = ">=0.12.0"
rich = ">=13.7.0"

[tool.poetry.scripts]
vidgrab = "vidgrab.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
