[tool.poetry]
name = "vidgrab"
version = "0.3.0"
description = "CLI tool to download YouTube videos at maximum quality for video editing"
authors = ["gsjonio"]
license = "MIT"
readme = "README.md"
packages = [{ include = "vidgrab" }]

[tool.poetry.dependencies]
python = ">=3.11"
yt-dlp = ">=2024.1.1"
typer = ">=0.12.0"
rich = ">=13.7.0"

[tool.poetry.scripts]
vidgrab = "vidgrab.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.18,<0.16.0)",
    "pylint (>=4.0.6,<5.0.0)",
    "mypy (>=2.1.0,<3.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

[tool.pylint.main]
py-version = "3.11"

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 12
max-positional-arguments = 12
max-attributes = 10
max-locals = 20

[tool.pylint.messages_control]
disable = [
    "W0613", # unused-argument — `version` is consumed by the Typer eager callback
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=vidgrab --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
omit = ["vidgrab/__main__.py"]
